--- a/composer.json
+++ b/composer.json
@@ -1,30 +1,26 @@
 {
     "name": "ellaisys/aws-cognito",
     "description": "AWS Cognito package that allows Auth and other related features using the AWS SDK for PHP",
-    "keywords": ["php", "laravel", "aws", "cognito", "auth", "authentication", "oauth", "user pool", "ellaisys"],
+    "keywords": ["php", "laravel", "aws", "cognito", "auth", "authentication", "oauth", "user pool"],
     "type": "library",
     "license": "MIT",
-    "homepage": "https://github.com/ellaisys/aws-cognito",
+    "homepage": "https://github.com/bluefyn-international/aws-cognito",
     "authors": [
         {
-            "name": "EllaiSys",
-            "email": "support@ellaisys.com",
-            "role": "owner",
-            "homepage": "https://ellaisys.github.io/"
+            "name": "Bluefyn International",
+            "role": "owner"
         }
     ],
-    "support": {
-        "email": "support@ellaisys.com"
-    },
     "prefer-stable": true,
     "minimum-stability": "stable",
     "require": {
-        "php": "^7.0",
+        "php": "^7.4",
         "guzzlehttp/guzzle": ">=6.0",
         "aws/aws-sdk-php": ">=3.0"
     },
     "require-dev": {
-        "phpunit/phpunit": ">=9.0"
+        "phpunit/phpunit": ">=9.0",
+        "friendsofphp/php-cs-fixer": "^2.17"
     },
     "autoload": {
         "psr-4": {
@@ -42,5 +38,10 @@
         "branch-alias": {
             "dev-master": "1.0-dev"
         }
+    },
+    "scripts": {
+        "test": [
+            "vendor/bin/phpunit"
+        ]
     }
 }
