--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "prefer-stable": true,
     "minimum-stability": "stable",
     "require": {
-        "php": "^7.4",
+        "php": "^7.4|^8.0",
         "guzzlehttp/guzzle": ">=6.0",
         "aws/aws-sdk-php": ">=3.0"
     },
